# objed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
prj.objed/: CMakeLists.txt
prj.objed/objed/: CMakeLists.txt  objed.h  objedutils.h  simplest.h
prj.objed/objed/src/: additivecl.cpp  additivecl.h  cascadecl.cpp  cascadecl.h  detector.cpp  detector.h  haar1pwcl.cpp  haar1pwcl.h  haar1stumpcl.cpp  haar1stumpcl.h  haar2pwcl.cpp  haar2pwcl.h  haar2stumpcl.cpp  haar2stumpcl.h  haar3pwcl.cpp  haar3pwcl.h  haar3stumpcl.cpp  haar3stumpcl.h  imagepool.cpp  imagepool.h  imgutils.cpp  imgutils.h  lazydet.cpp  lazydet.h  license.txt  linearcl.cpp  linearcl.h  maxcl.cpp  maxcl.h  meancl.cpp  meancl.h  multidet.cpp  multidet.h  objed.cpp  objedutils.cpp  parallelcl.cpp  parallelcl.h  roicl.cpp  roicl.h  simpledet.cpp  (+5 more)
prj.objed/objedcheck/: CMakeLists.txt
prj.objed/objedcheck/res/: objedcheck.qrc  objedcheck.rc
prj.objed/objedcheck/src/: imageviewdock.cpp  imageviewdock.h  main.cpp  objedcheck.cpp  objedcheck.h
prj.objed/objedcheck/ui/: objedcheck.ui
prj.objed/objedcutcli/: CMakeLists.txt
prj.objed/objedcutcli/src/: main.cpp  objedcutcli.cpp  objedcutcli.h  objedcututils.cpp  objedcututils.h
prj.objed/objedmarker/: CMakeLists.txt
prj.objed/objedmarker/res/: objedmarker.qrc  objedmarker.rc
prj.objed/objedmarker/src/: editorpropsdialog.cpp  editorpropsdialog.h  main.cpp  markupeditor.cpp  markupeditor.h  objectsizedialog.cpp  objectsizedialog.h  objedmarker.cpp  objedmarker.h  opendialog.cpp  opendialog.h
prj.objed/objedmarker/ui/: editorpropsdialog.ui  objectsizedialog.ui  objedmarker.ui
prj.objed/objedruncli/: CMakeLists.txt
prj.objed/objedruncli/src/: main.cpp  objedruncli.cpp  objedruncli.h  objedrunutils.cpp  objedrunutils.h
prj.objed/objedtraincli/: CMakeLists.txt
prj.objed/objedtraincli/src/: datasetproc.cpp  datasetproc.h  main.cpp  objedtraincli.cpp  objedtraincli.h  objedtrainutils.cpp  objedtrainutils.h  realadaboost.cpp  trainscproc.cpp  trainscproc.h
prj.objed/objedutils/: CMakeLists.txt  objedcompare.h  objedconfig.h  objedconsole.h  objedexp.h  objedimage.h  objedio.h  objedmarkup.h  objedopenmp.h  objedsys.h  objedtimer.h
prj.objed/objedutils/src/: objedcompare.cpp  objedconf.h.cmakein  objedconfig.cpp  objedconsole.cpp  objedexp.cpp  objedimage.cpp  objedio.cpp  objedmarkup.cpp  objedopenmp.cpp  objedsys.cpp  objedtimer.cpp
prj.thirdparty/: CMakeLists.txt
prj.thirdparty/json-cpp/: CMakeLists.txt
prj.thirdparty/json-cpp/.svn/: wc.db
prj.tools/: CMakeLists.txt
prj.tools/augmentation/: CMakeLists.txt  augmentation.cpp  augmentation.h  augmentation_gamma.cpp  augmentation_gamma.h  augmentation_rotate.cpp  augmentation_rotate.h  augmentation_utils.cpp  augmentation_utils.h
prj.tools/cascade2tree/: CMakeLists.txt  cascade2tree.cpp  cascade2tree.h
prj.tools/visualizer/: CMakeLists.txt  visualizer.cpp  visualizer.h
